[package]
name = "tfn-test-staking"
version = "0.0.1"
authors = [ "DrDelphi",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.54.4"

[dependencies.tfn-platform]
path = "../tfn-platform-rs"

[dependencies.tfn-staking]
path = "../tfn-staking-rs"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.4"
